RESOLVED FIXED88177
InjectedBundles' sandbox extensions don't do what we think they do
https://bugs.webkit.org/show_bug.cgi?id=88177
Summary InjectedBundles' sandbox extensions don't do what we think they do
Sam Weinig
Reported 2012-06-02 17:41:53 PDT
InjectedBundles sandbox extensions don't do what we think they do
Attachments
Patch (1.73 KB, patch)
2012-06-02 17:45 PDT, Sam Weinig
andersca: review+
Sam Weinig
Comment 1 2012-06-02 17:45:14 PDT
Sam Weinig
Comment 2 2012-06-02 17:46:01 PDT
Sam Weinig
Comment 3 2012-06-02 17:47:32 PDT
Note You need to log in before you can comment on or make changes to this bug.