InjectedBundles' sandbox extensions don't do what we think they do https://bugs.webkit.org/show_bug.cgi?id=88177

Reviewed by Anders Carlsson.

This cannot be tested with our current infrastructure (or any modifications of the
infrastructure I can think of) since it relies on the bundle being put outside
the build directory where WebKit is put.

* WebProcess/InjectedBundle/mac/InjectedBundleMac.cpp:
(WebKit::InjectedBundle::load):
Use SandboxExtension::consumePermanently() rather than consume(), otherwise,
nulling out the SandboxExtension a few lines later invalidates the extension
we just consumed.


Canonical link: https://commits.webkit.org/106012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119344 268f45cc-cd09-0410-ab3c-d52691b4dbfc